--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Kam Lasater <kam.lasater@cyclic.sh>",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^5.3.1",
     "aws-sdk": "^2.1141.0",
     "body-parser": "^1.20.0",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
