--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "casual-file-sender",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "start:dev": "nodemon",
     "build": "tsc",
