--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "nodemon",
     "build": "tsc",
-    "start": "npm run build && node build/index.js"
+    "start": "node build/server.js"
   },
   "keywords": [],
   "author": "Łukasz Lewandowski",
